[gd_scene load_steps=2 format=3 uid="uid://bt16dq5ib2ilc"]

[ext_resource type="Script" uid="uid://cnlktoohbrx3a" path="res://water_body.gd" id="1_40w73"]

[node name="water_body" type="Node2D"]
script = ExtResource("1_40w73")
spring_number = 10

[node name="water" type="Polygon2D" parent="."]
color = Color(0.172549, 1, 1, 0.309804)

[node name="Area2D" type="Area2D" parent="."]

[node name="water_colision" type="CollisionPolygon2D" parent="Area2D"]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
